<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Who Am I?</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pergunta">Como você está se sentindo agora?</string>
    <string name="configuracoes">Configure seu perfil</string>
    <string name="feliz">Feliz</string>
    <string name="ansioso">Ansioso</string>
    <string name="alegre">Alegre</string>
    <string name="animado">Animado</string>
    <string name="triste">Triste</string>
    <string name="irritado">Irritado</string>
    <string name="title_activity_configuracoes">Configuracoes</string>
    <string name="acessibilidade">Acessibilidade</string>
    <string name="dados_pessoais">Dados pessoais</string>
    <string name="caracteristicas">Características</string>
    <string name="proteja_dados">Proteja seus dados</string>
    <string name="politica_priv">Política de privacidade</string>
    <string name="uso_facebook">Importar dados do Facebook</string>
    <string name="title_activity_exporta_perfil">ExportaPerfil</string>
    <string name="exportar">Exportar</string>
    <string name="msg_exporta_perfil">Envie seu perfil Who Am I? por e-mail.</string>
    <string name="title_activity_politica_privacidade">PoliticaPrivacidade</string>
    <string name="title_activity_proteger_dados">ProtegerDados</string>
    <string name="senha_acesso">Senha de acesso</string>
    <string name="fazer_backup">Fazer backup</string>
    <string name="title_activity_senha_acesso">SenhaAcesso</string>
    <string name="texto_definicao_senha">Ao definir uma senha de acesso, apenas será possível acessar seu perfil após fazer login.</string>
    <string name="senha">Senha:</string>
    <string name="salvar">Salvar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="preferencias">Preferências</string>
    <string name="title_activity_acess__locomocao">Acess_Locomocao</string>
    <string name="locomocao">Você tem alguma dificuldade de locomoção?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="title_activity_acess__som">Acess_Som</string>
    <string name="som">Som</string>
    <string name="title_activity_acess__fala">Acess_Fala</string>
    <string name="fala">Você tem alguma dificuldade na fala?</string>
    <string name="title_activity_acess__visao">Acess_Visao</string>
    <string name="visao">O que você vê na imagem acima?</string>
    <string name="ok">OK</string>
    <string name="visao_opcao1">Circulo</string>
    <string name="visao_opcao2">Triângulo</string>
    <string name="visao_opcao3">Estrela</string>
    <string name="cores">Cores</string>
    <string name="vermelho">Vermelho</string>
    <string name="verde">Verde</string>
    <string name="outra_cor">Outra cor</string>
    <string name="title_activity_acess__percepcaocores">Acess_Cores</string>
    <string name="configuracoes_de_acessibilidade">Configurações de Acessibilidade</string>
    <string name="descricao_imagem_acess_visao">Imagem para identificação do grau de visão</string>
    <string name="title_activity_dados_pessoais_main">DadosPessoaisMain</string>
    <string name="idade">Idade:</string>
    <string name="sexo">Sexo:</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="local_de_nascimento">Local de nascimento</string>
    <string name="ocupacao">Ocupação:</string>
    <string name="primeira_lingua">Primeira língua:</string>
    <string name="proximo">Próximo</string>
    <string name="estado">Estado:</string>
    <string name="cidade">Cidade:</string>
    <string name="nivel_de_escolaridade">Nível de escolaridade:</string>
    <string name="ensino_fundamental">Ensino fundamental</string>
    <string name="ensino_medio">Ensino médio</string>
    <string name="ensino_superior">Ensino superior</string>
    <string name="sem_escolaridade">Sem escolaridade</string>
    <string name="segunda_lingua">Segunda língua:</string>
    <string name="title_activity_caracteristicas">Caracteristicas</string>
    <string name="calmo">Calmo</string>
    <string name="amavel">Amável</string>
    <string name="mal_humorado">Mal-humorado</string>
    <string name="organizado">Organizado</string>
    <string name="quieto">Quieto</string>
    <string name="reservado">Reservado</string>
    <string name="timido">Tímido</string>
    <string name="simpatico">Simpático</string>
    <string name="comunicativo">Comunicativo</string>
    <string name="tenso">Tenso</string>
    <string name="title_activity_preferencias_main">PreferenciasMain</string>
    <string name="saude">Nutrição e Saúde</string>
    <string name="interesses">Interesses</string>
    <string name="pref_interface">Interface</string>
    <string name="title_activity_pref_interface">PrefInterface</string>
    <string name="title_activity_pref_interesses">PrefInteresses</string>
    <string name="title_activity_pref_saude">PrefSaude</string>
    <string name="entrada_de_dados">Entrada de dados</string>
    <string name="primaria">Primária:</string>
    <string name="voz">Voz</string>
    <string name="touch">Touch</string>
    <string name="saida_de_dados">Saída de dados</string>
    <string name="secundaria">Secundária</string>
    <string name="visual">Visual</string>
    <string name="title_activity_pref_iapresentacao_info">PrefIApresentacaoInfo</string>
    <string name="texto">Texto</string>
    <string name="imagem">Imagem</string>
    <string name="grafico">Gráfico</string>
    <string name="cor">Cor</string>
    <string name="linguagem_de_sinais">Linguagem de sinais</string>
    <string name="apresentacao_da_informacao">Apresentação da informação:</string>
    <string name="avatar">Gostaria da ajuda de um avatar durante a utilização de aplicações ubíquas?</string>
    <string name="title_activity_pref_notifications">PrefNotifications</string>
    <string name="title_activity_pref_layout">PrefLayout</string>
    <string name="notificacoes">Notificações</string>
    <string name="sonora">Sonora</string>
    <string name="layout">Layout</string>
    <string name="tamanho_da_fonte">Tamanho da fonte:</string>
    <string name="pequeno">Pequeno</string>
    <string name="medio">Médio</string>
    <string name="grande">Grande</string>
    <string name="tamanho_dos_elementos_graficos">Tamanho dos elementos gráficos:</string>
    <string name="contraste">Contraste:</string>
    <string name="audicao">Você está ouvindo o som de um gato miando?</string>
    <string name="texto_cores">Indique quais cores você está vendo nos círculos abaixo:</string>
    <string name="vegetarianismo">De qual forma de vegetarianismo você é adepto?</string>
    <string name="ovovegetarianismo">Ovovegetarianismo</string>
    <string name="lactovegetarianismo">Lactovegetarianismo</string>
    <string name="ovolactovegetarianismo">Ovolactovegetarianismo</string>
    <string name="vegetarianismo_semiestrito">Vegetarianismo semiestrito</string>
    <string name="vegetarianismo_estrito">Vegetarianismo estrito</string>
    <string name="nao_sou_vegetariano">Não sou vegetariano</string>
    <string name="title_activity_pref_gen_musical">PrefGenMusical</string>
    <string name="title_activity_pref_jogos">PrefJogos</string>
    <string name="title_activity_pref_recreacao">PrefRecreacao</string>
    <string name="title_activity_pref_esportes">PrefEsportes</string>
    <string name="generos_cinematograficos">Escolha seus gêneros cinematográficos preferidos:</string>
    <string name="acao">Ação</string>
    <string name="animacao">Animação</string>
    <string name="artes_marciais">Artes marciais</string>
    <string name="aventura">Aventura</string>
    <string name="classicos">Clássicos</string>
    <string name="comedia">Comédia</string>
    <string name="criancas_e_familia">Crianças e família</string>
    <string name="crime">Crime</string>
    <string name="cult">Cult</string>
    <string name="documentario">Documentário</string>
    <string name="drama">Drama</string>
    <string name="jogos_preferidos">Escolha seus tipos de jogos preferidos:</string>
    <string name="corrida">Corrida</string>
    <string name="estrategia">Estratégia</string>
    <string name="fliperama">Fliperama</string>
    <string name="jogos_de_plataforma">Jogos de plataforma (ex.: Donkey Kong, Super Mario Bros., e Sonic)</string>
    <string name="jogos_de_tabuleiro">Jogos de tabuleiro</string>
    <string name="jogos_para_criancas">Jogos para crianças</string>
    <string name="luta">Luta</string>
    <string name="quebra_cabecas">Quebra-cabeças</string>
    <string name="rpg">RPG (Roleplaying)</string>
    <string name="simulacao">Simulação</string>
    <string name="stg">STG (Shoot-Em-Up)</string>
    <string name="recreacao">Escolha seus tipos de recreação preferidos:</string>
    <string name="acampamento">Acampamento</string>
    <string name="animais_de_estimacao">Animais de estimação</string>
    <string name="aquarios">Aquários</string>
    <string name="artes">Artes</string>
    <string name="brinquedos">Brinquedos</string>
    <string name="caca">Caça</string>
    <string name="caminhadas">Caminhadas</string>
    <string name="ciclismo">Ciclismo</string>
    <string name="circo">Circo</string>
    <string name="colecionismo">Colecionismo</string>
    <string name="danca">Dança</string>
    <string name="fantoches">Fantoches</string>
    <string name="feiras">Feiras</string>
    <string name="festivais">Festivais</string>
    <string name="filmes">Filmes</string>
    <string name="fogos_de_artificio">Fogos de artifício</string>
    <string name="fotografia">Fotografia</string>
    <string name="galerias_de_arte">Galerias de arte</string>
    <string name="humor">Humor</string>
    <string name="jardinagem">Jardinagem</string>
    <string name="jogos">Jogos</string>
    <string name="jogos_de_adivinhacao">Jogos de adivinhação</string>
    <string name="jogos_de_azar">Jogos de azar</string>
    <string name="jogos_de_palavras">Jogos de palavras</string>
    <string name="livros">Livros</string>
    <string name="loterias">Loterias</string>
    <string name="malabarismo">Malabarismo</string>
    <string name="mochilagem">Mochilagem</string>
    <string name="modelos_ferroviarios">Modelos ferroviários</string>
    <string name="montanhas_russas">Montanhas russas</string>
    <string name="museus">Museus</string>
    <string name="nos_e_emendas">Nós e emendas</string>
    <string name="observacao_de_aves">Observação de aves</string>
    <string name="palavras_cruzadas">Palavras cruzadas</string>
    <string name="pesca">Pesca</string>
    <string name="pipas">Pipas</string>
    <string name="praias">Praias</string>
    <string name="radio">Rádio</string>
    <string name="rafting">Rafting</string>
    <string name="televisao">Televisão</string>
    <string name="truques_com_cartas">Truques com cartas</string>
    <string name="truques_de_magica">Truques de mágica</string>
    <string name="viagens">Viagens</string>
    <string name="zoologicos">Zoológicos</string>
    <string name="esportes_">Esportes</string>
    <string name="quais_dados_deseja_importar_do_facebook_">Quais dados deseja importar?</string>
    <string name="todos">Todos</string>
    <string name="informacoes_pessoais">Informações pessoais (ex.: idade, sexo, profissão, etc.)</string>
    <string name="gosto_musical">Gosto musical</string>
    <string name="genero_de_filmes_preferidos">Gêneros de filmes preferidos</string>
    <string name="tipos_de_jogos_preferidos">Tipos de jogos preferidos</string>
    <string name="esportes_praticados">Tipos de esportes praticados</string>
    <string name="atividades_de_recreacao_preferidas">Atividades de recreação preferidas</string>
    <string name="importar">Importar</string>
    <string name="fps">FPS (First Person Shooter)</string>
</resources>