<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/jogos_preferidos"
            android:textSize="17sp" />

        <CheckBox
            android:id="@+id/jogo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickPrefJogos"
            android:text="@string/acao" />

        <CheckBox
            android:id="@+id/jogo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickPrefJogos"
            android:text="@string/aventura" />

        <CheckBox
            android:id="@+id/jogo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickPrefJogos"
            android:text="@string/corrida" />

        <CheckBox
            android:id="@+id/jogo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickPrefJogos"
            android:text="@string/esportes_" />

        <CheckBox
            android:id="@+id/jogo5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickPrefJogos"
            android:text="@string/estrategia" />

        <CheckBox
            android:id="@+id/jogo6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickPrefJogos"
            android:text="@string/fliperama" />

        <CheckBox
            android:id="@+id/jogo15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickPrefJogos"
            android:text="@string/fps" />

        <CheckBox
            android:id="@+id/jogo7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickPrefJogos"
            android:text="@string/jogos_de_plataforma" />

        <CheckBox
            android:id="@+id/jogo8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickPrefJogos"
            android:text="@string/jogos_de_tabuleiro" />

        <CheckBox
            android:id="@+id/jogo9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickPrefJogos"
            android:text="@string/jogos_para_criancas" />

        <CheckBox
            android:id="@+id/jogo10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickPrefJogos"
            android:text="@string/luta" />

        <CheckBox
            android:id="@+id/jogo11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickPrefJogos"
            android:text="@string/quebra_cabecas" />

        <CheckBox
            android:id="@+id/jogo12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickPrefJogos"
            android:text="@string/rpg" />

        <CheckBox
            android:id="@+id/jogo13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickPrefJogos"
            android:text="@string/simulacao" />

        <CheckBox
            android:id="@+id/jogo14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickPrefJogos"
            android:text="@string/stg" />

        <Button
            android:id="@+id/salvar_pref_jogos"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/botao_configuracoes"
            android:text="@string/proximo"
            android:textColor="#FFFFFF" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:max="5"
            android:progress="2" />
    </LinearLayout>

</ScrollView>